# upland

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  upland.code-workspace  vcpkg-configuration.json  vcpkg.json
.github/workflows/: linux.yml  macos.yml  windows.yml
android-project/: .gitignore  build.gradle  gradle.properties  settings.gradle
android-project/upland/: build.gradle  proguard-rules.pro
android-project/upland/src/main/: AndroidManifest.xml
android-project/upland/src/main/java/com/honeybunch/upland/: UplandActivity.java
android-project/upland/src/main/res/values/: strings.xml  styles.xml
assets/scenes/: upland.blend  upland.glb
source/: main.c  projectilecomponent.cpp  projectilecomponent.h  shootercomponent.cpp  shootercomponent.h  shootersystem.cpp  shootersystem.h
source/win32/: upland.exe.manifest  upland.rc
